# AUTONOMY

./: .gitignore  Anchor.toml  README.md  deployer-keypair.json  package-lock.json  package.json
backend/: .env  index.js  package-lock.json  package.json
backend/models/: ProposalStatus.js
backend/routes/: api.js
frontend/: .env  DaoDetail.js  ProposalDetail.js  config-overrides.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: DaoDetail.css  DaoDetail.js  Dashboard.css  Dashboard.js  Initialize.css  InitializeDao.js  Proposal.css  ProposalDetail.js  ProposalUpdate.css  ProposalUpdate.html.js  ProposalUpdate.js
frontend/src/context/: WalletContext.js
frontend/src/idl/: newdapp.json
frontend/src/utils/: connection.js  proposalUtils.js
programs/newdapp/: Cargo.toml
programs/newdapp/src/: lib.rs
tests/: newdapp.ts
