[package]
name = "newdapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "newdapp"

[features]
default = []
# cpi = ["no-entrypoint"]
# no-entrypoint = []
# no-idl = []
# no-log-ix-name = []
# idl-build = ["anchor-lang/idl-build"]
# idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { version = "0.28.0", features = ["token"] }